--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,13 +5,13 @@
   --foreground: #171717;
 }
 
-@theme inline {
+/* @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
 
-}
+} */
 
 /* body{
   font-family: 'Montserrat', sans-serif;
