--- a/src/app/home/Hero.module.css
+++ b/src/app/home/Hero.module.css
@@ -1,17 +1,18 @@
-.mainCon{
+/* .mainCon{
 position: absolute;
 top:0 ;
 display: flex;
 justify-content: center;
 align-items: center;
 z-index: 10;
-height: 50%;
-}
-.title{
+
+} */
+/* .title{
     /* font-size: 72px; */
-    text-align: center;
-    width: 30px;
-}
+    /* text-align: center; */
+    
+/* }  */
+
 /* 
 .glowText {
   color: #000;
